Fixed unknown symbol error with Java 8.